--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -49,5 +49,15 @@
         android:text="Campus Tour"
         android:textSize="30sp" />
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="42dp"
+        android:backgroundTint="#d11f08"
+        android:entries="@array/places_array" />
+
 
 </RelativeLayout>
