--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -20,44 +20,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView"
+            android:layout_marginTop="12dp"
+            android:backgroundTint="#d11f08"
+            android:entries="@array/places_array" />
+
 
     </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|left"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:padding="5dp">
-
-
-            <RadioGroup
-                android:id="@+id/custom_info_window_options"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <RadioButton
-                    android:id="@+id/default_info_window"
-                    android:checked="true"
-                    android:text="default info window" />
-
-                <RadioButton
-                    android:id="@+id/custom_info_contents"
-                    android:text="custom info contents" />
-
-                <RadioButton
-                    android:id="@+id/custom_info_window"
-                    android:text="custom info window" />
-            </RadioGroup>
-        </LinearLayout>
-    </FrameLayout>
 
 
 </FrameLayout>
