--- a/app/src/main/res/layout/custom_info_contents.xml
+++ b/app/src/main/res/layout/custom_info_contents.xml
@@ -20,8 +20,8 @@
 
     <ImageView
         android:id="@+id/badge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="90dp"
         android:layout_marginRight="5dp"
         android:adjustViewBounds="true"></ImageView>
 
