--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="2">
 
 
     <ImageButton
@@ -13,7 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="22dp"
+        android:layout_weight='1'
         android:contentDescription="Campus Tour"
         android:src="@drawable/gps" />
 
@@ -22,7 +25,7 @@
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gps"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="19dp"
         android:layout_toStartOf="@+id/textView2"
         android:gravity="center"
         android:text="GPS"
@@ -37,7 +40,8 @@
         android:layout_marginStart="34dp"
         android:layout_marginTop="18dp"
         android:layout_toEndOf="@+id/gps"
-        android:src="@drawable/old_well" />
+        android:src="@drawable/old_well"
+        android:layout_weight='1'/>
 
     <TextView
         android:id="@+id/textView2"
@@ -48,16 +52,6 @@
         android:gravity="center"
         android:text="Campus Tour"
         android:textSize="30sp" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="42dp"
-        android:backgroundTint="#d11f08"
-        android:entries="@array/places_array" />
 
 
 </RelativeLayout>
