--- a/app/src/main/res/drawable/circlebutton.xml
+++ b/app/src/main/res/drawable/circlebutton.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#eeffffff" />
-    <corners android:bottomRightRadius="8dp"
-        android:bottomLeftRadius="8dp"
-        android:topRightRadius="8dp"
-        android:topLeftRadius="8dp"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <stroke android:color="#1E90FF" android:width="5dp" />
+            <solid android:color="#1E90FF"/>
+            <size android:width="30dp" android:height="30dp"/>
+        </shape>
+    </item>
+</selector>
