--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -31,15 +31,15 @@
     <Button
         android:id="@+id/btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="50dp"
-        android:background = "@drawable/roundedbutton"
+        android:background="@drawable/roundedbutton"
         android:text="Navigate" />
 
     <Button
         android:id="@+id/voice"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="100dp"
         android:background="@drawable/roundedbutton"
         android:text="Voice" />
